force-app/main/default/objects/AVO_Process_State_Transition__c/AVO_Process_State_Transition__c.object-meta.xml
<CustomObject>
    <label>Process State Transition</label>
    <nameField>
        <displayFormat>ST-{00000}</displayFormat>
        <label>State Transition ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Process State Transitions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>