force-app/main/default/objects/AVO_Process_State_Transition__c/fields/Avo_Auto_State_Transition__c.field-meta.xml
<CustomField>
    <fullName>Avo_Auto_State_Transition__c</fullName>
    <formula>IF( ISBLANK(text(Avo_From_State__c)), &apos;None&apos;, text( Avo_From_State__c ))  + &apos; -&gt; &apos;+text( Avo_To_State__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auto State Transition</label>
    <type>Text</type>
</CustomField>