force-app/main/default/objects/AVO_Process_State_Transition__c/fields/Avo_Deposit_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Avo_Deposit_Triggers__c</fullName>
    <label>Deposit Triggers</label>
    <summaryFilterItems>
        <field>AVO_Process_State_Transition_Trigger__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Deposit Trigger</value>
    </summaryFilterItems>
    <summaryForeignKey>AVO_Process_State_Transition_Trigger__c.Avo_Process_State_Transition__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>