force-app/main/default/objects/AVO_Process_State_Transition__c/fields/Avo_Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Avo_Display_Order__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Display Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>