force-app/main/default/objects/AVO_Process_State_Transition__c/fields/Avo_Must_Met_Conditons__c.field-meta.xml
<CustomField>
    <fullName>Avo_Must_Met_Conditons__c</fullName>
    <label>Must Met Conditions</label>
    <summaryForeignKey>AVO_Process_State_Transition_Stopper__c.Avo_Process_State_Transition__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>