force-app/main/default/objects/AVO_Process_State_Transition__c/fields/Avo_Post_Transition_Actions__c.field-meta.xml
<CustomField>
    <fullName>Avo_Post_Transition_Actions__c</fullName>
    <label>Post Transition Actions</label>
    <summaryForeignKey>AVO_Process_State_Post_Actions__c.Avo_Process_State_Transition__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>