force-app/main/default/objects/AVO_Process_State_Transition__c/fields/Avo_Process__c.field-meta.xml
<CustomField>
    <fullName>Avo_Process__c</fullName>
    <label>Process</label>
    <referenceTo>AVO_Process__c</referenceTo>
    <relationshipLabel>Process State Transitions</relationshipLabel>
    <relationshipName>State_Transitions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>