force-app/main/default/objects/AVO_Process_State_Transition__c/fields/Avo_To_State__c.field-meta.xml
<CustomField>
    <fullName>Avo_To_State__c</fullName>
    <label>To State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Avo_Object_Status</valueSetName>
    </valueSet>
</CustomField>