force-app/main/default/objects/AVO_Process_State_Transition__c/fields/Avo_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Avo_Triggers__c</fullName>
    <label>Triggers</label>
    <summaryForeignKey>AVO_Process_State_Transition_Trigger__c.Avo_Process_State_Transition__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>